# pythonishc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compiler-theory-samples.sln
base/: Dockerfile  setup-base.sh
bison-flex-checker/: README.md  codegen.bat  codegen.sh  globals.h  grammar.gen.c  grammar.gen.h  grammar.y  lexer.gen.c  lexer.l  main.c
builder/: Dockerfile  docker-build.sh  docker-run-bash.sh  setup-builder.sh
github/: MappingHighLevelConstructsToLLVM.rst  tool-setup.md
lemon-1-calculator/: CalcGrammar.cpp  CalcGrammar.lemon  CalcLexer.cpp  CalcLexer.h  CalcParser.cpp  CalcParser.h  README.md  generate-grammar.sh  main.cpp
lemon-2-interpreter/: BatchGrammar.cpp  BatchGrammar.lemon  BatchParser.cpp  BatchParser.h  InterpreterContext.cpp  README.md  main.cpp
lemon-3-error-recovery/: BatchGrammar.lemon  BatchLexer.cpp  InterpreterContext.cpp  generate-grammar.sh  main.cpp
lemon-4-ast/: BatchAST.cpp  BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.h  BatchParser.cpp
lemon-5-minimal-structured/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.cpp  BatchParser_private.h  README.md  main.cpp
lemon-5-structured/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.h  BatchGrammar.lemon  BatchLexer.cpp  BatchParser.cpp  BatchParser.h
lemon-6-full-structured/: BatchAST.cpp  BatchAST.h  InterpreterContext.cpp  StringPool.h  lemon-5-structured.pro
lemon-7-functions/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.h  BatchGrammar.lemon  BatchLexer.cpp  BatchLexer.h  BatchParser.cpp  BatchParser.h  BatchParser_private.h  InterpreterContext.cpp  InterpreterContext.h  README.md  VariablesScope.h  lemon-7-functions.vcxproj
lemon-8-types/: AST.cpp  AST.h  BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.h  BatchGrammar.lemon  BatchLexer.cpp  BatchLexer.h  BatchParser.cpp  BatchParser.h  BatchParser_private.h  Grammar.cpp  Grammar.lemon  Interpreter.cpp  Interpreter.h  InterpreterContext.cpp  InterpreterContext.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Value.cpp  Value.h  VariablesScope.cpp  main.cpp
lemon-9-final/: AST.cpp  AST.h  Grammar.cpp  Grammar.lemon  InterpreterContext.cpp  InterpreterContext.h  Lexer.cpp  README.md  Value.cpp  Value.h  VariablesScope.h
lemon-based-parser/: CMakeLists.txt
lemon-based-parser/lemon-1-calculator/: CalcGrammar.cpp  CalcGrammar.h  CalcGrammar.lemon  CalcLexer.cpp  CalcLexer.h  CalcParser.cpp  CalcParser.h  ICalcParser.h  Token.h  main.cpp
lemon-based-parser/lemon-2-interpreter/: BatchGrammar.cpp  BatchGrammar.h  BatchGrammar.lemon  BatchLexer.cpp  BatchParser.cpp  BatchParser.h  InterpreterContext.h  main.cpp
lemon-based-parser/lemon-3-error-recovery/: BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.cpp  BatchLexer.h  BatchParser.cpp  BatchParser.h  README.md
lemon-based-parser/lemon-4-ast/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.cpp  BatchLexer.h  BatchParser.cpp  BatchParser.h  README.md  main.cpp
lemon-based-parser/lemon-5-minimal-structured/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.cpp  BatchParser.cpp  BatchParser.h  BatchParser_private.h  Token.h
lemon-based-parser/lemon-6-full-structured/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.cpp  BatchParser.cpp  BatchParser.h  BatchParser_private.cpp  main.cpp
lemon-based-parser/lemon-7-functions/: BatchAST.cpp  BatchAST.h  BatchGrammar.cpp  BatchGrammar.lemon  BatchLexer.cpp  BatchLexer.h  BatchParser.cpp  BatchParser.h  BatchParser_private.h  InterpreterContext.cpp  InterpreterContext.h  Token.h  VariablesScope.cpp  lemon-7-functions.vcxproj.filters  main.cpp
lemon-based-parser/lemon-8-types/: AST.cpp  AST.h  Grammar.cpp  Grammar.lemon  InterpreterContext.cpp  InterpreterContext.h  Lexer.cpp  Parser.cpp  Parser.h  README.md  Token.h  Value.cpp
lemon-based-parser/lemon-9-final/: AST.cpp  AST.h  Grammar.cpp  Grammar.lemon  Interpreter.cpp  InterpreterContext.cpp  InterpreterContext.h  Lexer.cpp  Parser.cpp  Parser_private.h
lex-based-scanner/: cc.bat  cc.sh  cpp_subset_scanner.l
llvm-1-compiler/: AST.cpp  AST.h  ASTVisitor.h  CodegenVisitor.cpp  CodegenVisitor.h  CompilerDriver.cpp  FrontendContext.cpp  FrontendContext.h  Interpreter.cpp  Interpreter.h  InterpreterContext.cpp  InterpreterContext.h  Lexer.cpp  Parser.cpp  Parser.h  VariablesScope.cpp  VariablesScope.h  main.cpp
llvm-1-ir-translator/: CodegenVisitor.cpp  CodegenVisitor.h  Grammar.h  Grammar.lemon  README.md
llvm-2-compiler/: CodegenVisitor.cpp  CodegenVisitor.h  README.md  (+3 more)
llvm-codegen/: CMakeLists.txt
llvm-codegen/cmake/: CustomFindLLVM.cmake
llvm-codegen/compiler-tests/: test-llvm-4.py
llvm-codegen/compiler-tests/data/: boolean_operations.txt  first-space-velocity.txt  simple_strings_concat.txt
llvm-codegen/includes/: begin_llvm.h
llvm-codegen/llvm-1-ir-translator/: CompilerDriver.cpp  CompilerDriver.h  FrontendContext.h  Grammar.cpp  Lexer.cpp  README.md  VariablesScope.h
llvm-codegen/llvm-2-compiler/: CodegenVisitor.cpp  CompilerDriver.cpp  FrontendContext.cpp  FrontendContext.h  VariablesScope.cpp
llvm-codegen/llvm-3-structured/: AST.cpp  CompilerDriver.cpp  FrontendContext.cpp  FrontendContext.h  Parser.h  VariablesScope.h
llvm-codegen/llvm-4-types/: ASTVisitor.h  CodegenVisitor.cpp  CodegenVisitor.h  CompilerDriver.cpp  Grammar.cpp  Grammar.lemon  Lexer.cpp  Lexer.h
src/: CMakeLists.txt
src/includes/: end_llvm.h
src/llvm-1-ir-translator/: CodegenVisitor.cpp
src/llvm-2-compiler/: CodegenVisitor.h  CompilerBackend.h  CompilerDriver.cpp  FrontendContext.cpp  VariablesScope.h
src/llvm-3-structured/: CodegenVisitor.cpp  CodegenVisitor.h  CompilerDriver.cpp  FrontendContext.cpp  Grammar.lemon  Lexer.cpp  Lexer.h
src/llvm-4-types/: CodegenVisitor.cpp  CompilerBackend.cpp  CompilerBackend.h  README.md  TypecheckVisitor.cpp
src/pythonishc/: CompilerBackend.cpp  CompilerDriver.cpp  CompilerDriver.h  FrontendContext.cpp  FrontendContext.h  Lexer.h  Parser.cpp  Utility.h  main.cpp
(+137 files in other folders)
